; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_context.c_context_queue_fbo_entry_destruction.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_context.c_context_queue_fbo_entry_destruction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_context = type { i32 }
%struct.fbo_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_context*, %struct.fbo_entry*)* @context_queue_fbo_entry_destruction to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @context_queue_fbo_entry_destruction(%struct.wined3d_context* %0, %struct.fbo_entry* %1) #0 {
  %3 = alloca %struct.wined3d_context*, align 8
  %4 = alloca %struct.fbo_entry*, align 8
  store %struct.wined3d_context* %0, %struct.wined3d_context** %3, align 8
  store %struct.fbo_entry* %1, %struct.fbo_entry** %4, align 8
  %5 = load %struct.fbo_entry*, %struct.fbo_entry** %4, align 8
  %6 = getelementptr inbounds %struct.fbo_entry, %struct.fbo_entry* %5, i32 0, i32 0
  %7 = call i32 @list_remove(i32* %6)
  %8 = load %struct.wined3d_context*, %struct.wined3d_context** %3, align 8
  %9 = getelementptr inbounds %struct.wined3d_context, %struct.wined3d_context* %8, i32 0, i32 0
  %10 = load %struct.fbo_entry*, %struct.fbo_entry** %4, align 8
  %11 = getelementptr inbounds %struct.fbo_entry, %struct.fbo_entry* %10, i32 0, i32 0
  %12 = call i32 @list_add_head(i32* %9, i32* %11)
  ret void
}

declare dso_local i32 @list_remove(i32*) #1

declare dso_local i32 @list_add_head(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
